...
    <FrameLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <ListView
            android:id="@+id/advanced_collection_page"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:descendantFocusability="beforeDescendants"/>

        <TextView
            android:id="@+id/unsaved_message_textview"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:background="@color/unsaved_message_background"
            android:gravity="center"
            android:padding="8dp"
...
