...
            android:id="@+id/coin_name_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="@string/name_label"
            android:labelFor="@id/coin_name_edittext"/>

        <EditText
            android:id="@+id/coin_name_edittext"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="5"
...
            android:id="@+id/coin_mint_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="@string/mint_label"
            android:labelFor="@id/coin_mint_edittext"/>

        <EditText
            android:id="@+id/coin_mint_edittext"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="5"
...
